# pyFormex

./: .gitattributes  .gitignore  000-CONTENTS-000  BUGS  COPYING  ChangeLog  Changelog  Communication  Description  FAQ  HOWTO-dev.rst  HOWTO.create.movies  HOWTO.dev  History  IDEAS  MANIFEST.in  MANIFEST.py  Makefile  Makefile.dist  Makefile.install  README  RELEASE  ReleaseNotes  ReleaseNotes-0.2.1  ReleaseNotes-0.2.2  ReleaseNotes-0.3  ReleaseNotes-0.3.1  ReleaseNotes-0.4  ReleaseNotes-0.4.1  ReleaseNotes-0.4.2  ReleaseNotes-0.5  ReleaseNotes-0.6  ReleaseNotes-0.7  Releases  STYLE  Stamp  Stamp.stamp  Stamp.static  Stamp.staticdir  Stamp.template  (+84 more)
2to3/: compat_3k.py  pyformex  pyformex.conf
doc/: htmlindex.header
examples/: BarrelVault.py  Baumkuchen.py  Circle.py  Clip.py  ColorDoubleLayer.py  Diamatic.py  Dome.py  DoubleDiamatic.py  DoubleLayer.py  Formex.py  Geodesic.py  Geodetic.py  Hyparcap.py  KochLine.py  Lamella.py  Lima.py  Novation.py  ParabolicTower.py  Pattern.py  ScallopDome.py  Schwedler.py  SpaceTrussRoof.py  SpaceTrussRoof_calpy.py  SpaceTrussRoof_f2abq.py  Sphere.py  Sphere2.py  Sphere_stl.py  Spiral.py  Stars.py  Stl.py  Torus.py  TrussBridge.py  TrussFrame.py  WireStent.py  WireStent_calpy.py  X-truss-analysis.py  X-truss.py  X_truss.py  X_truss_analysis.py  X_truss_calpy.py  (+9 more)
gui/: __init__.py  actionlist.py  actors.py  camera.py  cameraMenu.py  canvas.py  colors.py  colorscale.py  decors.py  draw.py  fileMenu.py  gui.py  help.py  image.py  marks.py  menu.py  prefMenu.py  scriptsMenu.py  toolbar.py  viewMenu.py  viewport.py  viewportMenu.py  views.py  widgets.py
icons/: backview.xbm  backview.xpm  bottomview.xbm  bottomview.xpm  down.xbm  down.xpm  ff.xbm  ff.xpm  flat.xpm  flatwire.xpm  frontview.xbm  frontview.xpm  happy.xbm  happy.xpm  home.xbm  home.xpm  isoview.xbm  left.xbm  left.xpm  leftview.xbm  leftview.xpm  next.xbm  next.xpm  nextstop.xbm  perspect.xpm  prev.xbm  prev.xpm  question.xpm  right.xbm  rightview.xbm  rightview.xpm  rotdown.xbm  rotdown.xpm  rotleft.xbm  rotleft.xpm  rotright.xbm  rotright.xpm  rotup.xbm  rotup.xpm  smooth.xpm  (+21 more)
manual/: HOWTO  Makefile  README  app-gpl.tex  canvas.tex  config.tex  coords.tex  draw.tex  examples.tex  faq.tex  fig.mp  front.tex  gui.tex  imagelist  intro.tex  manual.ps  manual.tex  plugins.tex  preface.tex  pyformex.help  pyformex.issue  pyformex.tex  refman.tex  simple.tex  src2man.py  tutorial.tex
pkg/: README  _do
plugins/: __init__.py  elements.py  example.1.py  f2abq.py  f2flu.py  formex_menu.py  inertia.py  lima.py  partition.py  properties.py  sectionize.py  stl.py  stl_abaqus.py  stl_abq.py  stl_menu.py  tetgen.py  turtle.py
postabq/: Makefile  postabq.c
pyformex/: __init__.py  adjacency.py  apps.py  array.py  arraytools.py  backports.py  collection.py  compat_2k.py  config.py  connectivity.py  coords.py  coordsys.py  elements.py  fileread.py  filewrite.py  flatkeydb.py  formex.py  formian.py  geometry.py  geomfile.py  geomtools.py  globaldata.py  main.py  mesh.py  messages.py  misc.py  multi.py  mydict.py  numtools.py  odict.py  olist.py  project.py  pyformex  pyformex-3  pyformex-search  pyformexrc  script.py  sendmail.py  simple.py  svnclean  (+6 more)
pyformex/lib/: Makefile  Makefile.conf  Makefile.in  README  __init__.py  _nurbs_module.c  acsite.m4  configure  configure.ac  configure_py  drawgl.py  drawgl_.c  drawgl_module.c  drawglmodule.c  misc.py  misc_.c  misc_module.c  miscmodule.c  nurbs.py  nurbs_.c  nurbs_module.c  postabq.c
screenshots/: README
sphinx/: HOWTO  HOWTO.rst  Makefile  _static  bumpix.rst  conf.py  config.rst  convert.py  defines.inc  drawing.rst  examples.rst  faq.rst  file_format.rst  front.rst  geometry.rst  gui.inc  gui.rst  imaging.rst  index.rst  install.rst  intro.rst  license.rst  links.inc  meta.rst  plugins.rst  projects.rst  properties.rst  py2rst.py  pyformex.help  quickref.py  ref-arraytools.rst  ref-colors.rst  ref-colorscale.rst  ref-connectivity.rst  ref-coords.rst  ref-curve.rst  ref-draw.rst  ref-fe.rst  ref-formex.rst  ref-image.rst  (+26 more)
stats/: create_revision_graph  pyformex-releases.fdb  pyformex-rev.gnu  pyformex-rev.list  pyformex-stats.db  pyformex-stats.gnu  pyformex.sloc.0.2  pyformex.sloc.0.2.2  pyformex.sloc.0.3  pyformex.sloc.0.4  pyformex.sloc.0.4.1  pyformex.sloc.0.4.2  pyformex.sloc.0.5  pyformex.sloc.0.6  pyformex.sloc.0.7  pyformex.sloc.0.7.1  pyformex.sloc.0.7.2  pyformex.sloc.0.7.3  pyformex.sloc.0.8  pyformex.sloc.0.8.1  pyformex.sloc.0.8.2  pyformex.sloc.0.8.3  pyformex.sloc.0.8.4  pyformex.sloc.0.8.5  pyformex.sloc.0.8.6  pyformex.sloc.0.8.8  sloc.py
user/: Makefile  pyformex-user-meeting-0.rst  pyformex-user-meeting-1.rst  pyformex-user-meeting-10.rst  pyformex-user-meeting-11.rst  pyformex-user-meeting-12.rst  pyformex-user-meeting-2.rst  pyformex-user-meeting-3.rst  pyformex-user-meeting-4.rst  pyformex-user-meeting-5.rst  pyformex-user-meeting-6.rst  pyformex-user-meeting-7.rst  pyformex-user-meeting-8.rst  pyformex-user-meeting-9.rst
website/: Makefile  README  applications.rst  conf.py  contents.rst  defines.inc  developer.html  docdoc.inc  documentation.html  download.html  examples.html  examples_geometry.html  examples_surface.html  gallery.rst  get_projhtml  header.html  header.inc  html2xhtml  index.html  index.rst  index.rst.alt  links.html  links.inc  links.rst  news.inc  pfav.xcf  projhtml.cache  projnews.cache  pyformex-news.cache  pyformex.css  pyformex.html  pyformex_fixed.css  r2w.ini  rest2web.diff  screenshots.html  screenshots.rst  split_home  stars.py  support.rst  surface.html  (+4 more)
website2/: Makefile  conf.py  contents.rst  gallery.rst  images  (+7 more)
(+1032 files in other folders)
